[package]
name = "iwdrs"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Rust cratte for iwd"
readme = "Readme.md"
homepage = "https://github.com/pythops/iwdrs"
repository = "https://github.com/pythops/iwdrs"

[dependencies]
zbus = "5"
zvariant = "5"
uuid = { version = "1", features = ["v4"] }
thiserror = "2.0.17"
strum = {version = "0.27.2", features = ["derive"]}
futures-lite = "2.6.1"

[dev-dependencies]
clap = {version = "4.5.48", features = ["derive"]}
tokio = {version = "1.47.1", features = ["rt", "macros"]}
zbus = {version = "5", features = ["tokio"]}
